--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "cucumber": "^6.0.7",
     "vue": "^2.7.7",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
