--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "apexcharts": "^3.35.4",
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
+    "chart.js": "^3.8.2",
     "core-js": "^3.8.3",
     "cucumber": "^6.0.7",
     "vue": "^2.7.7",
+    "vue-apexcharts": "^1.6.2",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
