--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.7.7",
     "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.1.1",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
