--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.2.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "apexcharts": "^3.35.4",
     "bootstrap": "^5.2.0",
