--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,20 @@ cloud.aws.s3.bucket=${properties.file.aws-bucket}
 logging.level.com.amazonaws.util.EC2MetadataUtils=error
 # size setting
 spring.servlet.multipart.max-file-size=1024MB
+
+# email setting
+## mail default settings
+spring.mail.default-encoding=UTF-8
+## mail custom settings
+spring.mail.host=smtp.naver.com
+spring.mail.port=587
+spring.mail.username=${properties.file.naver-id}
+spring.mail.password=${properties.file.naver-pw}
+spring.mail.properties.mail.smtp.auth=true
+
+spring.mail.properties.mail.smtp.enable=true
+spring.mail.properties.mail.smtp.trust=smtp.naver.com
+
+# redis
+spring.redis.host=${properties.file.host}
+spring.redis.port=6379
