--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@vee-validate/rules": "^4.6.2",
     "apexcharts": "^3.35.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "chart.js": "^3.8.2",
