--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.7.7",
     "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.1.1",
+    "vue-daum-postcode": "^0.10.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.7",
