--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,13 +29,12 @@ spring.servlet.multipart.max-file-size=1024MB
 spring.mail.default-encoding=UTF-8
 ## mail custom settings
 spring.mail.host=smtp.naver.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=${properties.file.naver-id}
 spring.mail.password=${properties.file.naver-pw}
 spring.mail.properties.mail.smtp.auth=true
-
-spring.mail.properties.mail.smtp.enable=true
-spring.mail.properties.mail.smtp.trust=smtp.naver.com
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
 # redis
 spring.redis.host=${properties.file.host}
