--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,18 @@
     "chart.js": "^3.8.2",
     "core-js": "^3.8.3",
     "cucumber": "^6.0.7",
+    "d3": "^7.6.1",
+    "d3-cloud": "^1.2.5",
     "geolocation": "^0.2.0",
     "hchs-vue-charts": "^1.2.8",
     "vue": "^2.7.7",
     "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.1.1",
+    "vue-d3-cloud": "^0.2.0",
     "vue-daum-postcode": "^0.10.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
+    "vue-wordcloud": "^1.1.1",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
