--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,3 +39,10 @@ spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 # redis
 spring.redis.host=${properties.file.host}
 spring.redis.port=6379
+
+# ssl
+security.require-ssl=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=${properties.file.naver-pw}
+server.ssl.enabled=true
