--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -41,8 +41,9 @@ spring.redis.host=${properties.file.host}
 spring.redis.port=6379
 
 # ssl
-security.require-ssl=true
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=${properties.file.naver-pw}
-server.ssl.enabled=true
+#security.require-ssl=true
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=${properties.file.naver-pw}
+#server.ssl.enabled=true
+
