--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -6,6 +6,7 @@ build/
 !**/src/test/**/build/
 
 **/src/main/resources/properties/env.properties
+**/src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
@@ -41,3 +42,4 @@ out/
 
 *.properties
 
+/backend/src/main/resources/application.properties
