--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -40,9 +40,9 @@ spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.redis.host=${properties.file.host}
 spring.redis.port=6379
 
-# ssl
-security.require-ssl=true
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=${properties.file.naver-pw}
-server.ssl.enabled=true
+## ssl
+#security.require-ssl=true
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=${properties.file.naver-pw}
+#server.ssl.enabled=true
