update redis port & pw

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
 # redis
 spring.redis.host=${properties.file.host}
-spring.redis.port=6379
-
+spring.redis.port=${properties.file.redis-port}
+spring.redis.password=${properties.file.naver-pw}
 # ssl
 security.require-ssl=true
 server.ssl.key-store=classpath:keystore.p12
