--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "d3-cloud": "^1.2.5",
     "geolocation": "^0.2.0",
     "hchs-vue-charts": "^1.2.8",
+    "sweetalert2": "^11.4.26",
     "vue": "^2.7.7",
     "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.1.1",
@@ -29,6 +30,7 @@
     "vue-daum-postcode": "^0.10.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
+    "vue-simple-alert": "^1.1.1",
     "vue-wordcloud": "^1.1.1",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
